--- a/app/views/ahw/current/building-other-fail.html
+++ b/app/views/ahw/current/building-other-fail.html
@@ -11,10 +11,10 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="enrichment">Back</a>
+  <a class="govuk-back-link" href="building-other">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,16 +26,14 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Each pair or group of calves must have at least one enrichment item, such as:</p>
-        <ul class="govuk-list govuk-list--bullet"><li>brushes</li>
-          <li>hanging balls</li>
-          <li>salt licks</li>
+      <p class="govuk-body">All buildings must:</p>
+        <ul class="govuk-list govuk-list--bullet"><li>be permanent structures</li>
+          <li>have adequate drainage</li>
+          <li>protect calves from draughts with solid walls/barriers to calf height</li>
           </ul>
-          {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
-          {{ govukInsetText({
-            text: "This does not include straw bedding and social contact."
-          }) }}
-          
+
+
+
 
 
 
