--- a/app/views/ahw/current/building-route.html
+++ b/app/views/ahw/current/building-route.html
@@ -49,7 +49,7 @@ Calf weight
 
                 {
                   value: "igloo",
-                  text: "Igloos or hutches grouped together",
+                  text: "Permanent igloos or hutches grouped together",
                   checked: checked("buildingroute", "igloo")
                 },
 
@@ -62,7 +62,7 @@ Calf weight
               ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
 
       </form>
@@ -73,11 +73,8 @@ Calf weight
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">All buildings must:</p>
-            <ul class="govuk-list govuk-list--bullet"><li>have adequate drainage</li>
-              <li>be easy-to-clean</li>
-              <li>protect calves from draughts with solid walls/barriers to calf height</li>
-              </ul>
+          <p class="govuk-body">All buildings must be permanent structures.</p>
+
 
             </div>
    </div>
