--- a/app/views/ahw/current/calf-healthy.html
+++ b/app/views/ahw/current/calf-healthy.html
@@ -59,7 +59,7 @@ Calf weight
               ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
 
       </form>
@@ -70,7 +70,7 @@ Calf weight
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">Healthy calves can only be housed individually in exceptional circumstances (for example, illness or no other calves of similar age).
+          <p class="govuk-body">Calves can only be housed individually in exceptional circumstances (for example, illness or no other calves of similar age).
           </p>
             </div>
    </div>
