--- a/app/views/ahw/current/calf-sick-fail.html
+++ b/app/views/ahw/current/calf-sick-fail.html
@@ -26,8 +26,13 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Calves may need to be temporarily isolated when sick to prevent spreading disease.</p>
+      <p class="govuk-body">The building must have facilities to temporarily isolate sick calves.
 
+        {{ govukInsetText({
+          text: "Sick calves may need to be temporarily isolated to prevent spreading disease."
+        }) }}
+
+      </p>
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
       </div>
