--- a/app/views/ahw/current/calf-weight-route.html
+++ b/app/views/ahw/current/calf-weight-route.html
@@ -111,7 +111,7 @@ About the project
 
 
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
 
       </form>
@@ -131,7 +131,7 @@ About the project
             Calves weighing between 100kg and 150kg must have at least 4m<sup>2</sup> living space.
 
             {% else %}
-            Calves weighing between 151kg and 200kg must have at least 5m<sup>2</sup> living space.
+            Calves weighing over 150kg must have at least 5m<sup>2</sup> living space.
 
             {% endif %}
 
