--- a/app/views/ahw/current/farmer-type-fail.html
+++ b/app/views/ahw/current/farmer-type-fail.html
@@ -26,7 +26,10 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.</p>
+      <p class="govuk-body">This grant is for:</p>
+        <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
+          <li>refurbishing or extending existing calf housing</li>
+          </ul>
 
 
 
