--- a/app/views/ahw/current/farmer-type.html
+++ b/app/views/ahw/current/farmer-type.html
@@ -78,9 +78,10 @@ Type of farmer
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for farmers raising calves up to the age of 1 year.<br><br>
-
-          </p>
+          <p class="govuk-body">This grant is for:</p>
+            <ul class="govuk-list govuk-list--bullet"><li>building new calf housing</li>
+              <li>refurbishing or extending existing calf housing</li>
+              </ul>
      </div>
    </div>
 
