--- a/app/views/ahw/current/solar.html
+++ b/app/views/ahw/current/solar.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Calf weight
+Straw bedding
 {% endblock %}
 
 {% block beforeContent %}
@@ -24,11 +24,11 @@ Calf weight
 
               {{ govukRadios({
                   classes: "govuk-radios--inline",
-                  idPrefix: 'calfsick',
-                  name: 'calfsick',
+                  idPrefix: 'solar',
+                  name: 'solar',
                   fieldset: {
                       legend: {
-                          text: 'Will there be facilities to temporarily isolate sick calves?',
+                          text: 'Is the roof able to support solar PV panels?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -38,13 +38,13 @@ Calf weight
                 {
                   value: "yes",
                   text: "Yes",
-                  checked: checked("calfsick", "yes")
+                  checked: checked("solar", "yes")
                 },
 
                 {
                   value: "no",
                   text: "No",
-                  checked: checked("calfsick", "no")
+                  checked: checked("solar", "no")
                 }
 
               ]
@@ -61,9 +61,7 @@ Calf weight
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">The building must have facilities to temporarily isolate sick calves.
-            <br><br>
-            Sick calves may need to be temporarily isolated to prevent spreading disease.
+          <p class="govuk-body">The roof must be able to support solar PV panels, allowing for potential use in the future.
           </p>
             </div>
    </div>
