--- a/app/views/ahw/current/straw-bedding.html
+++ b/app/views/ahw/current/straw-bedding.html
@@ -50,7 +50,7 @@ Straw bedding
               ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
 
       </form>
