--- a/app/views/water/current/abstraction-licence.html
+++ b/app/views/water/current/abstraction-licence.html
@@ -45,13 +45,13 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="expected by 21 October 2021" {{ checked("abstraction-licence", "expected by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence-3">
-                  Should be in place by 31 January 2023
+                  Should be in place by 31 January 2024
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="won’t have by 21 October 2021" {{ checked("abstraction-licence", "won’t have by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence-3">
-                  Will not be in place by 31st January 2023
+                  Will not be in place by 31 January 2024
                 </label>
               </div>
             </div>
@@ -66,7 +66,8 @@
     <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
       <aside class="app-related-items">
           <h3 class="govuk-heading-s"> Eligibility </h3>
-          <p> You must have secured abstraction licences or variations before you submit a full application. <br><br>Any abstraction licences or variations must be in place by 31 January 2023.
+          <p> You must have secured abstraction licences or variations before you submit a full application.<br><br>
+              Any abstraction licences or variations must be in place by 31 January 2024.
           </p>
       </aside>
     </div>
