--- a/app/views/water/current/change-summerabs-yes.html
+++ b/app/views/water/current/change-summerabs-yes.html
@@ -51,12 +51,12 @@
     },
     {
       value: "intro sustainable",
-      text: "Maintain and introduce or increase a sustanable water source",
+      text: "Maintain and introduce or increase a sustainable water source",
       checked: checked("change-summerabs-yes", "intro sustainable")
     },
     {
       value: "maintain sustainable",
-      text: "Maintain without introducing or increasing a sustanable water source",
+      text: "Maintain without introducing or increasing a sustainable water source",
       checked: checked("change-summerabs-yes", "maintain sustainable")
     },
     {
@@ -84,7 +84,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-          <h3 class="govuk-heading-s"> Funding  priorities </h3>
+          <h3 class="govuk-heading-s"> Eligibility </h3>
           <div class="govuk-body">
             <p>Your project cannot increase water use from summer abstraction or mains.</p>
             <p>RPA wants to fund projects that use more sustainable water sources, such as:</p>
