--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -90,7 +90,7 @@
             </legend>
 
             <div id="irrigation-systems-target" class="govuk-hint">
-              Select one or two options</div>
+              Select up to 2 options</div>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="irrigation-systems-target-1" name="irrigation-systems-target" type="checkbox" value="Boom" {{ checked("irrigation-systems-target", "Boom") }}>
@@ -156,11 +156,8 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-s"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
-            RPA wants to fund projects that:
-                   <ul>
-                    <li>improve the environment</li>
-                    <li>improve water sustainability</li>
-                   </ul>
+          <p>RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones, for example moving from rain gun to trickle.</p>
+
         </div>
       </aside>
     </div>
