--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -19,11 +19,26 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">User research</h2>
 
-        <p class='govuk-list app-list--definition'>
-        <a href='water/current/guidance' class="govuk-link--no-visited-state">Guidance: Water Management Grant</a></p>
+
           <p class='govuk-list app-list--definition'>
-            <a href='water/current/start' class="govuk-link--no-visited-state">Start page</a><br>
-            Specialist start page, hosted on GOV.UK</p>
+            <a href='water/current/current-irrigating' class="govuk-link--no-visited-state">Are you currently irrigating?</a><br>
+            Testing various journeys for scoring and flow purposes.</p>
+
+            <p class='govuk-list app-list--definition'>
+              <a href='water/current/current-irrigating' class="govuk-link--no-visited-state">Project items</a><br>
+              Testing how users select eligible items for their project.</p>
+
+              <p class='govuk-list app-list--definition'>
+                <a href='water/current/start' class="govuk-link--no-visited-state">Start page</a><br>
+                Specialist start page, hosted on GOV.UK</p>
+      </div>
+
+      <div class="proto-admin">
+<h3 class="govuk-heading-m">Guidance and emails</h3>
+
+
+            <p class='govuk-list app-list--definition'>
+            <a href='water/current/guidance' class="govuk-link--no-visited-state">Guidance: Water Management Grant</a></p>
 
         <p class='govuk-list app-list--definition'>
         <a href='#' class="govuk-link--no-visited-state">Confirmation email</a><br>
@@ -35,7 +50,7 @@
                             <p class='govuk-list app-list--definition'>
                               <a href='water/current/guidance' class="govuk-link--no-visited-state"><strong>Round 2: version 2 (current)</a></strong><br>
                               This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-856' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 29 October 2022<br/>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 12 January 2023<br/>
                                 </span></p>
 
                                 <p class='govuk-heading-m'>Previous versions</p>
@@ -77,8 +92,8 @@
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
               <p class='govuk-list app-list--definition'>
-                <a href='https://app.mural.co/t/dcx6016/m/ftfgrants4310/1626085420287/620bc3379126edc6a2653cd43fe0cba97f8477f4?sender=uac8e5181797d9857544e5168' target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
-                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural (Updated on 6 October 2021 for R1 public beta).<br></p>
+                <a href='https://app.mural.co/t/dcx6016/m/dcx6016/1660917133687/a590bf6eb5d9311fc2e46aef4743dbcd36c03fcc?sender=uac8e5181797d9857544e5168' target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
+                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Round 2 journey on Mural (Updated on 12 January 2023).<br></p>
 
 
             <p class='govuk-heading-m'>Wireframes - R2</p>
@@ -91,9 +106,7 @@
                         <a href='https://www.sketch.com/s/e7c8bc45-c33c-45eb-bed9-4c7481258b21' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
                           <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (always up-to date).</p>
 
-                          <p class='govuk-heading-m'>Design history (based on DfE model)</p>
-                            <p class='govuk-list app-list--definition'>
-                              <a href='https://grants-design-history.herokuapp.com/' class="govuk-link--no-visited-state" target="new" >Grants design history</a><br>
+
 
       </div>
 {% endblock %}
