--- a/app/views/ahw/current/additional-items-fail.html
+++ b/app/views/ahw/current/additional-items-fail.html
@@ -11,10 +11,10 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="enrichment">Back</a>
+  <a class="govuk-back-link" href="additional-items">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,17 +26,12 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Each pair or group of calves must have at least one enrichment item, such as:</p>
-        <ul class="govuk-list govuk-list--bullet"><li>brushes</li>
-          <li>hanging balls</li>
-          <li>salt licks</li>
+      <p class="govuk-body">The building must have:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>a humidity sensor</li>
+          <li>at least 2 IP66 sockets in housing areas</li>
+          <li>access to a water supply</li>
           </ul>
-          {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
-          {{ govukInsetText({
-            text: "This does not include straw bedding and social contact."
-          }) }}
-          
-
 
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
