--- a/app/views/ahw/current/calf-healthy-fail.html
+++ b/app/views/ahw/current/calf-healthy-fail.html
@@ -26,7 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Healthy calves can only be housed individually in exceptional circumstances (for example, illness or no other calves of similar age).</p>
+      <p class="govuk-body">Calves can only be housed individually in exceptional circumstances (for example, illness or no other calves of similar age).</p>
 
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
