--- a/app/views/ahw/current/calf-weight-route-fail.html
+++ b/app/views/ahw/current/calf-weight-route-fail.html
@@ -33,8 +33,8 @@
         Calves weighing between 100kg and 150kg must have at least 4m<sup>2</sup> living space.
 
         {% else %}
-        Calves weighing between 151kg and 200kg must have at least 5m<sup>2</sup> living space.
-
+        Calves weighing over 150kg must have at least 5m<sup>2</sup> living space.
+        
         {% endif %}
 
         </p>
