--- a/app/views/ahw/current/drainage2-fail.html
+++ b/app/views/ahw/current/drainage2-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 
-  <a class="govuk-back-link" href="calf-weight">Back</a>
+  <a class="govuk-back-link" href="drainage2">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,8 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Calves must weigh no more than 200kg.</p>
+      <p class="govuk-body">Each pen must have sloped flooring with a 1 in 20 (5%) gradient that slopes towards a drain or drainage channel.
+      </p>
 
 
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
