--- a/app/views/ahw/current/flooring-type.html
+++ b/app/views/ahw/current/flooring-type.html
@@ -50,7 +50,7 @@ Flooring type
               ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <p> <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
 
       </form>
