--- a/app/views/ahw/current/potential-grant.html
+++ b/app/views/ahw/current/potential-grant.html
@@ -26,14 +26,17 @@ Potential grant funding
       Potential grant funding
     </h1>
 
-    <p class="govuk-body">Based on the standardised grant amount for each item and the approximate <br>size and quantities you entered, we estimate you could be eligible for <br>a grant of
+    <p class="govuk-body">
 
-      {# Putting a rule to cap grant amount at 250,000 when the value goes over maximum grant amount of 250K #}
-      {% if data['potentialgrant'] >= 250000 %}
-        £250,000.</p>
-      {% else %}
-        £{{ data['potentialgrant']| toFixed(2) | commafy  }}.</p>
-      {% endif %}
+      {% set grantAmount = data['project-cost'] *0.4 %}
+      {% set projectCost = data['project-cost'] %}
+        {% if projectCost >=1250001 %}
+        <p class="govuk-body">You may be able to apply for a grant of up to £500,000, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
+
+        {% else %}
+      <p class="govuk-body">You may be able to apply for a grant of up to £{{ grantAmount | toFixed(2) | commafy }}, based on the estimated cost of £{{ data['project-cost'] | toFixed(2) | commafy }}.</p>
+            {% endif %}
+
 
     {{ govukWarningText({
         text: 'There’s no guarantee the project will receive a grant.',
