--- a/app/views/ahw/current/remaining-costs.html
+++ b/app/views/ahw/current/remaining-costs.html
@@ -23,7 +23,10 @@ Meeting the remaining project costs
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-      <h1 class="govuk-heading-l">Can you pay the remaining costs?</h1>
+        {% set projectCost = data['project-cost'] %}
+        {% set grantAmount = data['project-cost'] *0.4 %}
+        {% set remainingCost = projectCost-grantAmount %}
+      <h1 class="govuk-heading-l">Can you pay the remaining costs of £{{ remainingCost | toFixed(2) | commafy }}?</h1>
 
 
   <div class="govuk-radios govuk-radios--inline">
