--- a/app/views/water/current/water-source-4.html
+++ b/app/views/water/current/water-source-4.html
@@ -27,7 +27,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
-                What is your current main water source?
+                What is your main water source?
               </h2>
             </legend>
 
