AHW and Water updates via chat

--- a/app/views/ahw/current/calf-healthy.html
+++ b/app/views/ahw/current/calf-healthy.html
@@ -48,7 +48,7 @@ Calf weight
 
                 {
                   value: "sick",
-                  text: "Only in exceptional circumstance",
+                  text: "Only in exceptional circumstances",
                   checked: checked("calfhealthy", "sick"),
                   hint: {
                     text: "For example illness, no other calves of similar age"
