--- a/app/views/ahw/current/project-about.html
+++ b/app/views/ahw/current/project-about.html
@@ -27,7 +27,7 @@ About the project
                   name: 'projectabout',
                   fieldset: {
                       legend: {
-                          text: 'What is your project',
+                          text: 'What is your project?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -77,7 +77,7 @@ About the project
               <li>refurbishing or extending existing calf housing</li>
               </ul>
 
-          
+
      </div>
    </div>
 
