--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -43,7 +43,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-systems-current-2" name="irrigation-systems-current" type="checkbox" value="Capillary Bed" {{ checked("irrigation-systems-current", "Capillary Bed") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-2">
-                  Capillary Bed
+                  Capillary bed
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
@@ -101,7 +101,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Capillary Bed" {{ checked("irrigation-systems-target", "Capillary Bed") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-2">
-                    Capillary Bed
+                    Capillary bed
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
