AHW R1 fixes before UR

--- a/app/views/ahw/current/additional-items-fail.html
+++ b/app/views/ahw/current/additional-items-fail.html
@@ -28,6 +28,7 @@
 
       <p class="govuk-body">The building must have:</p>
         <ul class="govuk-list govuk-list--bullet">
+          <li>a minimum and maximum thermometer</li>
           <li>a humidity sensor</li>
           <li>at least 2 IP66 sockets in housing areas</li>
           <li>access to a water supply</li>
