--- a/app/views/ahw/current/additional-items.html
+++ b/app/views/ahw/current/additional-items.html
@@ -34,7 +34,7 @@ Straw bedding
                       }
                   },
                   hint: {
-                    html: "This building must have:<br><br><li>a minimum and maximum thermometer</li>
+                    html: "The building must have:<br><br><li>a minimum and maximum thermometer</li>
                     <li>a humidity sensor</li>
                     <li>at least 2 IP66 sockets in housing areas</li>
                     <li>access to a water supply</li>"
@@ -69,11 +69,12 @@ Straw bedding
           </h2>
           <p class="govuk-body">The building must have:</p>
             <ul class="govuk-list govuk-list--bullet">
+              <li>a minimum and maximum thermometer</li>
               <li>a humidity sensor</li>
               <li>at least 2 IP66 sockets in housing areas</li>
               <li>access to a water supply</li>
               </ul>
-              
+
             </div>
    </div>
 
