--- a/app/views/ahw/current/building-other.html
+++ b/app/views/ahw/current/building-other.html
@@ -37,7 +37,7 @@ Straw bedding
                   name: 'buildingother',
                   fieldset: {
                       legend: {
-                          text: 'Does your building structure meet the eligibility criteria',
+                          text: 'Does your building structure meet the eligibility criteria?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
