--- a/app/views/ahw/current/calf-weight.html
+++ b/app/views/ahw/current/calf-weight.html
@@ -69,7 +69,7 @@ Calf weight
           <p class="govuk-body">There must be a minimum floor area of:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>3m<sup>2</sup> per calf when largest calf is 100kg or under</li>
-              <li>4m<sup>2</sup> per calf when largest calf is under 150kg</li>
+              <li>4m<sup>2</sup> per calf when largest calf is between 100kg and 150kg</li>
               <li>5m<sup>2</sup> per calf when largest calf is over 150kg</li>
             </ul>
             </div>
