--- a/app/views/ahw/current/drainage-fail.html
+++ b/app/views/ahw/current/drainage-fail.html
@@ -26,7 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">Each pen must have sloped flooring with a 1 in 20 (5%) gradient that slopes towards a drain or drainage channel.
+      <p class="govuk-body">The building must have sloped flooring with a 1 in 20 (5%) gradient in bedded areas that slopes towards a drain or drainage channel.
       </p>
 
 
