--- a/app/views/ahw/current/drainage2.html
+++ b/app/views/ahw/current/drainage2.html
@@ -28,12 +28,14 @@ Straw bedding
                   name: 'drainage2',
                   fieldset: {
                       legend: {
-                          html: 'Will the building&apos;s housing and drinking areas have drainage with at least 5% slope?',
+                          html: 'Will the floor in bedded areas slope towards a drain or drainage channel?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
+                  hint: {
+                    text: "The floor must have at least a 5% gradient"
+                  },
                   items: [
                 {
                   value: "y",
@@ -61,7 +63,7 @@ Straw bedding
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">Each pen must have sloped flooring with a 1 in 20 (5%) gradient that slopes towards a drain or drainage2 channel.
+          <p class="govuk-body">The building must have sloped flooring with a 1 in 20 (5%) gradient in bedded areas that slopes towards a drain or drainage channel.
           </p>
             </div>
    </div>
