--- a/app/views/ahw/current/project-cost.html
+++ b/app/views/ahw/current/project-cost.html
@@ -26,7 +26,7 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-heading-l">What is the estimated cost of the calf housing?</h1>
+          <h1 class="govuk-heading-l">What is the total estimated cost of the calf housing?</h1>
           <div class="govuk-hint">
             The grant funding is for calf housing only.<br><br>
             You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £35,000 (40% of £87,500). The maximum grant is £500,000.<br><br/>Do not include VAT
