--- a/app/views/ahw/current/tenancy.html
+++ b/app/views/ahw/current/tenancy.html
@@ -38,7 +38,7 @@
                       }
                   },
                   hint: {
-                    text: "The location of the cattle calf"
+                    text: "The location of the calf housing"
                 },
 
                   items: [
