--- a/app/views/water/current/project-cost.html
+++ b/app/views/water/current/project-cost.html
@@ -24,7 +24,7 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-heading-l">What is the estimated cost of the items?</h1>
+          <h1 class="govuk-heading-l">What is the total estimated cost of the items?</h1>
           <div class="govuk-hint">
             You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £35,000 (40% of £87,500).
 The maximum grant is £500,000.<br><br>
@@ -41,7 +41,7 @@ Do not include VAT
         </div>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-      
+
 
 
       </form>
