--- a/app/views/water/v8public/project-cost.html
+++ b/app/views/water/v8public/project-cost.html
@@ -25,7 +25,7 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
-              What is the estimated cost<br> of the items?
+              What is the total estimated cost<br> of the items?
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
