--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -156,7 +156,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-s"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
-          <p>RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones, for example moving from rain gun to trickle.</p>
+          <p>RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones. </p>
 
         </div>
       </aside>
