--- a/app/views/water/current/irrigation-system.html
+++ b/app/views/water/current/irrigation-system.html
@@ -100,7 +100,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-s"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
-            RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones. 
+            RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones.<br><br> For example, moving from rain gun to trickle.
         </div>
       </aside>
     </div>
