--- a/app/views/water/current/irrigation-systems.html
+++ b/app/views/water/current/irrigation-systems.html
@@ -27,8 +27,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
               <h2 class="govuk-fieldset__heading">
-                Will your irrigation system change?
-              </h2>
+                What is your current irrigation system?</h2>
             </legend>
 
             <div id="irrigation-systems" class="govuk-hint">
@@ -156,7 +155,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-s"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
-          <p>RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones. <br><br> For example, moving from rain gun to trickle.</p>
+          <p>RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones. <br><br>For example, moving from rain gun to trickle.</p>
 
         </div>
       </aside>
