--- a/app/views/water/current/change-summerabs-yes.html
+++ b/app/views/water/current/change-summerabs-yes.html
@@ -51,12 +51,12 @@
     },
     {
       value: "intro sustainable",
-      text: "Maintain and introduce or increase a sustainable water source",
+      text: "No change, but will add or increase a sustainable water source",
       checked: checked("change-summerabs-yes", "intro sustainable")
     },
     {
       value: "maintain sustainable",
-      text: "Maintain without introducing or increasing a sustainable water source",
+      text: "No change",
       checked: checked("change-summerabs-yes", "maintain sustainable")
     },
     {
