GRANTS-1579, GRANTS-1580, GRANTS-1581, GRANTS-1582, GRANTS-1582

--- a/app/views/water/current/water-source-3.html
+++ b/app/views/water/current/water-source-3.html
@@ -75,7 +75,7 @@
           <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                 <h2 class="govuk-fieldset__heading">
-                  What will be the new water source?
+                  Where will the irrigation water come from?
                 </h2>
               </legend>
 
