--- a/app/views/water/current/water-source.html
+++ b/app/views/water/current/water-source.html
@@ -25,8 +25,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                What will be the new water source?
+              <h1 class="govuk-fieldset__heading">Where will the irrigation water come from?
               </h1>
             </legend>
           </fieldset>
